--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -70,6 +70,7 @@
     "enterUserName":"Please enter a username.",
     "enterConfirmPassword":"Please verify your password",
     "passwordsDoNotMatch":"Passwords do not match!",
+    "enter6DigitPassword":"Please enter 6 digit password.",
     "emailAlreadyExist":"This email already exists. Try another email.",
     "registerPleaseTryAgain":"An error occurred while registering. Please try again.",
     "cardPleaseTryAgain":"'An error occurred while creating the card. Try again.'",
